--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="all_product_content_holder">
 
                     <div class="product_circle">New</div>
-                    <img src="/images/p4.png" alt="">
+                    <img src="images/p4.png" alt="">
                     <div class="product_price_holder d-flex justify-content-between">
                         <span>Necklace</span>
                         <div>
@@ -125,7 +125,7 @@
                 <div class="all_product_content_holder">
 
                     <div class="product_circle">New</div>
-                    <img src="/images/p5.png" alt="">
+                    <img src="images/p5.png" alt="">
                     <div class="product_price_holder d-flex justify-content-between">
                         <span>Necklace</span>
                         <div></div>
@@ -139,7 +139,7 @@
                 <div class="all_product_content_holder">
 
                     <div class="product_circle">New</div>
-                    <img src="/images/p6.png" alt="">
+                    <img src="images/p6.png" alt="">
                     <div class="product_price_holder d-flex justify-content-between">
                         <span>Necklace</span>
                         <div>
@@ -155,7 +155,7 @@
                 <div class="all_product_content_holder">
 
                     <div class="product_circle">New</div>
-                    <img src="/images/p7.png" alt="">
+                    <img src="images/p7.png" alt="">
 
                     <div class="product_price_holder d-flex justify-content-between">
                         <span>Necklace</span>
@@ -173,7 +173,7 @@
                 <div class="all_product_content_holder">
 
                     <div class="product_circle">New</div>
-                    <img src="/images/p8.png" alt="">
+                    <img src="images/p8.png" alt="">
                     <div class="product_price_holder d-flex justify-content-between">
                         <span>Necklace</span>
                         <div>
@@ -203,7 +203,7 @@
                 <div class="about_img_content_holder">
                     <div class="img_box"></div>
 
-                    <img src="/images/about-img.jpg" alt="">
+                    <img src="images/about-img.jpg" alt="">
                 </div>
             </div>
 
@@ -228,7 +228,7 @@
         <div class="row">
             <div class="col-12  col-lg-7">
                 <div class="left_gallery_img bg-light">
-                    <img src="/images/o1.jpg" alt="">
+                    <img src="images/o1.jpg" alt="">
 
                     <div class="offer_price">
                         <h2>
@@ -246,7 +246,7 @@
                 <!-- <div class="d-flex d-lg-block gap-2"> -->
                 <div class="both_gallery_box">
                     <div class="right_gallery_img bg-light">
-                        <img src="/images/o2.jpg" alt="">
+                        <img src="images/o2.jpg" alt="">
 
                         <div class="offer_price2">
                             <h2>
@@ -260,7 +260,7 @@
                     </div>
 
                     <div class="right_gallery_img bg-light mt-3 ">
-                        <img src="/images/o3.jpg" alt="">
+                        <img src="images/o3.jpg" alt="">
 
                         <div class="offer_price3">
                             <h2>
@@ -288,7 +288,7 @@
             <div class="col-12 col-md-6 col-lg-6">
                 <div class="left_blog_content_holder">
                     <div class="left_blog_img_blog_date_box">
-                        <img src="/images/b1.jpg" alt="">
+                        <img src="images/b1.jpg" alt="">
                         <div class="blog_date">14 <br>july
                         </div>
                     </div>
@@ -307,7 +307,7 @@
             <div class="col-12  col-md-6 col-lg-6">
                 <div class="left_blog_content_holder">
                     <div class="left_blog_img_blog_date_box">
-                        <img src="/images/b2.jpg" alt="">
+                        <img src="images/b2.jpg" alt="">
                         <div class="blog_date">14 <br>july
                         </div>
                     </div>
@@ -335,7 +335,7 @@
 
             <div class="carousel-item active">
                 <div class="testimonial-carousel">
-                    <img src="/images/client.jpg" alt="Samantha Jonas">
+                    <img src="images/client.jpg" alt="Samantha Jonas">
                     <h5>Samantha Jonas</h5>
                     <p>It is a long established fact that a reader will be distracted by the readable cIt is a long
                         established fact that a reader will be distracted by the readable </p>
@@ -345,7 +345,7 @@
 
             <div class="carousel-item">
                 <div class="testimonial-carousel">
-                    <img src="/images/client.jpg" alt="Samantha Jonas">
+                    <img src="images/client.jpg" alt="Samantha Jonas">
                     <h5>Samanth Jonas</h5>
                     <p>It is a long established fact that a reader will be distracted by the readable cIt is a long
                         established fact that a reader will be distracted by the readable </p>
@@ -408,12 +408,12 @@
                 <div class="footer_all_content_holder">
                     <h4>INSTAGRAM</h4>
                     <div class="img_para_box  mb-3 mb-md-0 d-flex gap-3">
-                        <img src="/images/p1.png" alt="">
+                        <img src="images/p1.png" alt="">
                         <p>
                             long established fact that a reader</p>
                     </div>
                     <div class="img_para_box d-flex gap-3">
-                        <img src="/images/p2.png" alt="">
+                        <img src="images/p2.png" alt="">
                         <p>
                             long established fact that a reader</p>
                     </div>
